<resources>
    <string name="app_name" translatable="false">Quizzes</string>
    <string name="question1_title">Who is the author of this painting?</string>
    <string name="question2_title">Who is he?</string>
    <string name="question3_title">What country does this flag belong to?</string>
    <string name="send_button">SEND</string>
    <string name="is_correct">IS CORRECT!</string>
    <string name="no_option_selected">No option selected</string>
    <string name="wrong_answer">WRONG ANSWER!</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="question_attempts">Question attempts: </string>
    <string name="total_attempts">Total Attempts: </string>
    <string name="next_button">NEXT</string>
    <string name="retry_button">RETRY</string>
    <string name="finish_button">START AGAIN</string>

</resources>