<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
        name="Question" type="uoc.quizz.Question"/>
        <variable
        name="selectedOption" type="uoc.quizz.main.MainActivity"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".main.MainActivity">

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/questionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/slash"
            app:layout_constraintEnd_toStartOf="@+id/slash" />

        <TextView
            android:id="@+id/questionTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="3"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/slash"
            app:layout_constraintStart_toEndOf="@+id/slash"
            app:layout_constraintTop_toTopOf="@+id/slash" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="This is the question"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/slash"
            android:paddingTop="15dp"
            android:paddingBottom="30dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:src="@tools:sample/backgrounds/scenic" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <RadioButton
                android:id="@+id/optionOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                tools:text="Option1"
                android:textSize="20dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/optionTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                tools:text="Option2"
                android:textSize="20dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/optionThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                tools:text="Option3"
                android:textSize="20dp"
                android:textColor="@color/black"/>
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/send_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>